# feature

./: .readthedocs.yaml  README.md  conf.py
TestingMocks/: README.MD  cli_client.py  main.py  requiments.txt  test_client.py  test_server.py
docs/: conf.py  index.rst  requiments.txt  requirements.txt
git-branches/: README.md  main.py
maxkufilewizardos/: LICENSE  README.md  setup.cfg
maxkufilewizardos/maxkufilewizardos/: __init__.py  compare.py  core.py  monitor.py  search.py
