[metadata]
name = filewizardos
version = 0.1.0
author = Maxim Nagovitsyn
author_email = copperious@mail.ru
description = Простая и мощная утилита для работы с файлами и директориями
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MaxKuklaVod/features/filewizardos
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11

[options.packages.find]
where = .